hphp/hack/test/typecheck/reactive/vararg_mutable1.php
<?hh
class A {}


function f(<<__Mutable>> A ...$a): void {
}
